WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54871
[Qt][V8]REGRESSION(
r79157
): Fix build
https://bugs.webkit.org/show_bug.cgi?id=54871
Summary
[Qt][V8]REGRESSION(r79157): Fix build
Csaba Osztrogonác
Reported
2011-02-21 04:44:01 PST
http://trac.webkit.org/changeset/79209
broke Qt-V8 build on Linux, because Success is a macro from SerializedScriptValue.cpp -> config.h -> npruntime_internal.h -> nptypes.h ->npapi.h -> X11/xlib.h -> X11/X.h : Status { Success, InputError, JSException, JSFailure }; We should undef Success before using it. Patch is coming soon.
Attachments
propsed patch
(933 bytes, patch)
2011-02-21 04:59 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2011-02-21 04:59:33 PST
Created
attachment 83151
[details]
propsed patch See
http://trac.webkit.org/changeset/67323
for similar fix.
Andreas Kling
Comment 2
2011-02-21 05:01:21 PST
Comment on
attachment 83151
[details]
propsed patch Sigh. r=me
Csaba Osztrogonác
Comment 3
2011-02-21 05:05:41 PST
Landed in
http://trac.webkit.org/changeset/79210
Alexis Menard (darktears)
Comment 4
2011-02-23 04:58:04 PST
Landed in
http://trac.webkit.org/changeset/79210
so we can close the bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug