[Qt][V8]REGRESSION(r79157): Fix build https://bugs.webkit.org/show_bug.cgi?id=54871

Reviewed by Andreas Kling.

* bridge/npruntime_internal.h: Add one more undef because of evil X11 macro.



Canonical link: https://commits.webkit.org/69137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79210 268f45cc-cd09-0410-ab3c-d52691b4dbfc