Source/WebCore/bridge/npruntime_internal.h
@@ -50,4 +50,5 @@
     #undef NormalState
     #undef True
     #undef False
+    #undef Success
 #endif
